<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/lightred"
    tools:context=".PokemonScreenActivity" >

    <ImageView
        android:id="@+id/pokemon_img"
        android:layout_width="125dp"
        android:layout_height="150dp"
        android:contentDescription="@string/img_descr"
        />

        <TextView
            android:id="@+id/pokemon_name"
            android:layout_width="200dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="0dp"
            android:layout_toRightOf="@id/pokemon_img"
            android:text="@string/name"
            android:textSize="15sp" />
        
    <TextView
        android:id="@+id/pokemon_id"
       android:layout_width="200dp"
            android:layout_height="25dp"
            android:layout_below="@id/pokemon_name"
        android:layout_toRightOf="@id/pokemon_img"
        android:text="@string/id"
      android:textSize="15sp"
      />

    <TextView
        android:id="@+id/pokemon_type1"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_below="@id/pokemon_id"
        android:layout_toRightOf="@id/pokemon_img"
        android:text="@string/type1"
        android:textSize="15sp"
         />
    
    <TextView
        android:id="@+id/pokemon_type2"
        android:layout_width="200dp"
        android:layout_height="25dp"    
        android:layout_below="@id/pokemon_type1"
        android:layout_toRightOf="@id/pokemon_img"
        android:text="@string/type2"
         android:textSize="15sp"
         />
    
    <TextView
        android:id="@+id/pokemon_evolutions"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_below="@id/pokemon_type2"
        android:layout_toRightOf="@id/pokemon_img"
        android:text="@string/evol"
        android:textSize="15sp"
         />
    <TextView
        android:id="@+id/pokemon_descr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pokemon_img"
        android:text="@string/descr"
        android:textSize="15sp"
         />



</RelativeLayout>